[package]
name = "fractal_terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1", features = [ "wgpu" ] }
egui-wgpu = "0.20.0"
type-map = "0.5.0"
bytemuck = "1.12.3"
rand = "0.8.5"
cgmath = "0.18.0"
noise = "0.8.2"
